# hscourses

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  README.md  hscourses.cabal
app/: Main.hs
data/: input.json
doc/: todo.md
src/: Web.hs
src/MonadsEx/: Ex1.hs
src/OpticsByExample/: Ex1.hs
test/: Main.hs  Suite.hs
